--- a/final_assignment_group_2.Rmd
+++ b/final_assignment_group_2.Rmd
@@ -346,7 +346,7 @@ At this point, all of the relevant variables have been cleaned to a satisfactory
 
 ```{r}
 clean_data <- clean_data %>% 
-  select(how_old_are_you, industry, currency, Country, state.abb, city, overall_years_of_professional_experience, years_of_experience_in_field, highest_level_of_education_completed, gender, race, annual_salary ,total_earnings_USD) 
+  select(how_old_are_you, industry, currency, Country, state_abb, city, overall_years_of_professional_experience, years_of_experience_in_field, highest_level_of_education_completed, gender, race, annual_salary ,tot_earnings_USD) 
 ```
 
 
