--- a/Hamish_edits.Rmd
+++ b/Hamish_edits.Rmd
@@ -210,14 +210,14 @@ temp3
 ```
 
 
-The "city" data is also cleaned manually, this is done by grouping repeated names of the same city - for instance "New York", "New York City", "NYC" are all grouped as "NYC". We clean data for all cities that have n >= 5, beyond this point we assume that further cleaning of the data will have a negligible effect when comparing the characteristics of the main (most lived in) cities. For example - when comparing the average salaries of people who live in New York with those who live in Washington - further cleaning of city data with n < 5 items will not largely impact this comparison.  
+The "city" data is also cleaned manually, this is done by grouping repeated names of the same city - for instance "New York", "New York City", "NYC" are all grouped as "NY". We clean data for all cities that have n >= 5, beyond this point we assume that further cleaning of the data will have a negligible effect when comparing the characteristics of the main (most lived in) cities. For example - when comparing the average salaries of people who live in New York with those who live in Washington - further cleaning of city data with n < 5 items will not largely impact this comparison.  
 
 
 
 ```{r}
 #Clean City Data (clean all cities with n >= 5)
-clean_data$city <- gsub("New York City", "NYC", clean_data$city)
-clean_data$city <- gsub("New York", "NYC", clean_data$city)
+clean_data$city <- gsub("New York City", "NY", clean_data$city)
+clean_data$city <- gsub("New York", "NY", clean_data$city)
 clean_data$city <- gsub("Washington, DC", "DC", clean_data$city)
 clean_data$city <- gsub("Washington", "DC", clean_data$city)
 clean_data$city <- gsub("Washington DC", "DC", clean_data$city)
@@ -225,13 +225,13 @@ clean_data$city <- gsub("DC DC", "DC", clean_data$city)
 clean_data$city <- gsub("DC, D.C.", "DC", clean_data$city)
 clean_data$city <- gsub("Long Beach", "LA", clean_data$city)
 clean_data$city <- gsub("District of Columbia", "DC", clean_data$city)
-clean_data$city <- gsub("Manhattan", "NYC", clean_data$city)
+clean_data$city <- gsub("Manhattan", "NY", clean_data$city)
 clean_data$city <- gsub("San Francisco", "San Fran", clean_data$city)
 clean_data$city <- gsub("San Francisco Bay Area", "San Fran", clean_data$city)
-clean_data$city <- gsub("new york", "NYC", clean_data$city)
+clean_data$city <- gsub("new york", "NY", clean_data$city)
 clean_data$city <- gsub("DC D.C.", "DC", clean_data$city)
 clean_data$city <- gsub("SF Bay Area", "San Fran", clean_data$city)
-clean_data$city <- gsub("New york", "NYC", clean_data$city)
+clean_data$city <- gsub("New york", "NY", clean_data$city)
 clean_data$city <- gsub("Vancouver, BC", "Vancouver", clean_data$city)
 clean_data$city <- gsub("Bay Area", "San Fran", clean_data$city)
 clean_data$city <- gsub("Cambridge, MA", "Cambridge", clean_data$city)
@@ -242,7 +242,7 @@ clean_data$city <- gsub("Chicago suburbs", "Chicago", clean_data$city)
 clean_data$city <- gsub("D.C.", "DC", clean_data$city)
 clean_data$city <- gsub("South San Francisco", "San Fran", clean_data$city)
 clean_data$city <- gsub("Chicago Suburbs", "Chicago", clean_data$city)
-clean_data$city <- gsub("NYC, NY", "NYC", clean_data$city)
+clean_data$city <- gsub("NYC, NYC", "NY", clean_data$city)
 clean_data$city <- gsub("Boston area", "Boston", clean_data$city)
 clean_data$city <- gsub("chicago", "Chicago", clean_data$city)
 clean_data$city <- gsub("Los angeles", "LA", clean_data$city)
@@ -255,18 +255,18 @@ clean_data$city <- gsub("seattle", "Seattle", clean_data$city)
 clean_data$city <- gsub("Seattle, WA", "Seattle", clean_data$city)
 clean_data$city <- gsub("boston", "Boston", clean_data$city)
 clean_data$city <- gsub("London, UK", "London", clean_data$city)
-clean_data$city <- gsub("Nyc", "NYC", clean_data$city)
-clean_data$city <- gsub("NYC city", "NYC", clean_data$city)
+clean_data$city <- gsub("Nyc", "NY", clean_data$city)
+clean_data$city <- gsub("NYC city", "NY", clean_data$city)
 clean_data$city <- gsub("San francisco", "San Fran", clean_data$city)
 clean_data$city <- gsub("atlanta", "Atlanta", clean_data$city)
 clean_data$city <- gsub("Atlanta metro area", "Atlanta", clean_data$city)
-clean_data$city <- gsub("Bronx", "NYC", clean_data$city)
+clean_data$city <- gsub("Bronx", "NY", clean_data$city)
 clean_data$city <- gsub("Boston Area", "Boston", clean_data$city)
 clean_data$city <- gsub("Chicago, IL", "Chicago", clean_data$city)
 clean_data$city <- gsub("Greater Toronto Area", "Toronto", clean_data$city)
 clean_data$city <- gsub("indianapolis", "Indianapolis", clean_data$city)
 clean_data$city <- gsub("los angeles", "LA", clean_data$city)
-clean_data$city <- gsub("NY", "NYC", clean_data$city)
+clean_data$city <- gsub("NYC", "NY", clean_data$city)
 clean_data$city <- gsub("Santa Monica", "LA", clean_data$city)
 clean_data$city <- gsub("toronto", "Toronto", clean_data$city)
 clean_data$city <- gsub("Vancouver, British Columbia", "Vancouver", clean_data$city)
@@ -355,13 +355,13 @@ clean_data <- clean_data %>%
 
 
 
-
 ## Section 2 - Graphically summarising and exploring the Data.
 
-```{r}
-# Some quick counts, groups, etc
+Now that we have cleaned the data set, we can begin exploring it. We will start this process by looking individually at the different variables - determining the main components that make up each variable in the cleaned data set, as well as what proportion they represent...
 
-ask_a_manager_2021 %>% 
+```{r}
+# We begin by counting 
+prop_age <- ask_a_manager_2021 %>% 
   count(how_old_are_you, sort=TRUE) %>% 
   mutate(percent = 100* n/sum(n))
 ```
